# vuln-chain

./: Cargo.toml  README.md  chia-blockchain-result.json
src/: main.rs
src/analyzer/: chain.rs  mod.rs  severity.rs  taint.rs
src/dataflow/: composite.rs  flow_tracker.rs  graph.rs  mod.rs  sanitizers.rs  scope.rs
src/patterns/: dependency.rs  language.rs  language_extended.rs  mod.rs  vuln_rules.rs
src/report/: formatter.rs  mod.rs  sarif.rs
src/scanner/: engine.rs  file_collector.rs  iac.rs  mod.rs  secrets.rs
