[package]
name = "vulnchain"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
ignore = "0.4"